--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.13.0",
+    "eslint": "7.13.0",
     "jest": "27.0.6",
     "nodemon": "2.0.12",
     "standard": "16.0.3",
