--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lucas Daniel Andreatta",
   "license": "ISC",
   "devDependencies": {
     "eslint": "7.13.0",
